--- a/src/global.css
+++ b/src/global.css
@@ -1,28 +1,3 @@
-/**
- * WHAT IS THIS FILE?
- *
- * Globally applied styles. No matter which components are in the page or matching route,
- * the styles in here will be applied to the Document, without any sort of CSS scoping.
- *
- */
-
-/*
-  Colors generated using https://css.land/lch/
-
-  Hue offset +25
-  12-point hue (increments of 30)
-
-  E.g. red = 25 (0 + 25),
-    green = 145 (120 + 25),
-    blue = 265 (240 + 25)
-
-  For maximal color differentiation:
-    Lightness between 40% and 60%
-    Chroma 50% (66)
-
-  Large areas of color differentiation can ignore
-*/
-
 :root {
   --black-rgb: 0% 0% 0%;
   --dark-gray-rgb: 14.77% 14.77% 14.77%;
@@ -34,24 +9,21 @@
 
   --shader: rgba(var(--black-rgb) / var(--alpha-8));
   --highlighter: rgba(var(--white-rgb) / var(--alpha-8));
-
-  --bluebrightmuted: rgb(58.43% 73.73% 96.07%); /* lch(75% 33 265) */
-  --yellowbrightmuted: rgb(97.75% 93.92% 86.07%); /* lch(90% 33 85) */
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --separator: rgba(var(--white-rgb) / var(--alpha)); /* lch(88% 1.5 85) */
-    --fg: rgb(8.33% 7.46% 5.52%); /* lch(6% 3 85) */
-    --fg-muted: rgb(57.57% 56.58% 54.63%); /* lch(60% 3 85) */
-    --bg: rgb(94.2% 93.11% 90.97%); /* lch(94% 3 85) */
+    --separator: rgba(var(--white-rgb) / var(--alpha));
+    --fg: rgb(8.33% 7.46% 5.52%);
+    --fg-muted: rgb(57.57% 56.58% 54.63%);
+    --bg: rgb(94.2% 93.11% 90.97%);
     --bg-base: #fff;
-    --blue: rgb(0% 48.81% 81.83%); /* lch(50% 66 265) */
-    --teal: rgb(0% 52.14% 55.32%); /* lch(50% 66 205) */
-    --red: rgb(83.05% 24% 29.82%); /* lch(50% 66 25) */
-    --heavy-vishraam: rgb(55.17% 30% 13.76%); /* lch(40% 44 55) */
-    --medium-vishraam: rgb(9.32% 42.55% 19.52%); /* lch(40% 44 145) */
-    --light-vishraam: rgb(53% 27.31% 53.51%); /* lch(40% 44 295) */
+    --blue: rgb(0% 48.81% 81.83%);
+    --teal: rgb(0% 52.14% 55.32%);
+    --red: rgb(83.05% 24% 29.82%);
+    --heavy-vishraam: rgb(55.17% 30% 13.76%);
+    --medium-vishraam: rgb(9.32% 42.55% 19.52%);
+    --light-vishraam: rgb(53% 27.31% 53.51%);
   }
 
   a {
@@ -61,25 +33,51 @@
   a:hover {
     color: rgb(27.69% 58.77% 91.21%);
   }
+
+  @media (dynamic-range: high) {
+    @supports (color: lch(0 0 0)) {
+      :root {
+        --separator: lch(88% 1.5 85);
+        --fg: lch(4% 2 85);
+        --fg-muted: lch(40% 2 85);
+        --bg: lch(96% 2 85);
+        --bg-base: lch(100% 0 0);
+        --blue: lch(50% 66 265);
+        --teal: lch(50% 66 205);
+        --red: lch(50% 66 25);
+        --heavy-vishraam: lch(40% 44 55);
+        --medium-vishraam: lch(40% 44 145);
+        --light-vishraam: lch(40% 44 295);
+      }
+
+      a {
+        color: lch(40% 66 265);
+      }
+
+      a:hover {
+        color: lch(60% 66 265);
+      }
+    }
+  }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --separator: rgba(var(--black-rgb) / var(--alpha)); /* lch(30% 1.125 355) */
-    --fg: rgb(79.55% 77.27% 77.12%); /* lch(80% 2.25 25) */
-    --fg-muted: rgb(38.49% 36.51% 36.38%); /* lch(40% 2.25 25) */
-    --bg: rgb(20.2% 18.51% 19.08%); /* lch(20% 2.25 355) */
+    --separator: rgba(var(--black-rgb) / var(--alpha));
+    --fg: rgb(79.55% 77.27% 77.12%);
+    --fg-muted: rgb(38.49% 36.51% 36.38%);
+    --bg: rgb(20.2% 18.51% 19.08%);
     --bg-base: #000;
-    --blue: rgb(43.72% 69.01% 100%); /* lch(70% 53 265) */
-    --teal: rgb(0% 74.74% 79.18%); /* lch(70% 53 205) */
-    --red: rgb(100% 52.49% 52.68%); /* lch(70% 53 25) */
-    --heavy-vishraam: rgb(68.3% 53.37% 44.51%); /* lch(40% 44 55) */
-    --medium-vishraam: rgb(45.94% 60.18% 47.63%); /* lch(40% 44 145) */
-    --light-vishraam: rgb(57.97% 54.89% 70.53%); /* lch(40% 44 295) */
+    --blue: rgb(43.72% 69.01% 100%);
+    --teal: rgb(0% 74.74% 79.18%);
+    --red: rgb(100% 52.49% 52.68%);
+    --heavy-vishraam: rgb(68.3% 53.37% 44.51%);
+    --medium-vishraam: rgb(45.94% 60.18% 47.63%);
+    --light-vishraam: rgb(57.97% 54.89% 70.53%);
   }
 
   ::selection {
-    background: rgb(79.24% 59.19% 1.74% / 60%); /* lch(66% 70 80 / 60%) */
+    background: rgb(79.24% 59.19% 1.74% / 60%);
   }
 
   a {
@@ -93,6 +91,36 @@
   img,
   svg {
     filter: saturate(0.8);
+  }
+
+  @media (dynamic-range: high) {
+    @supports (color: lch(0 0 0)) {
+      :root {
+        --separator: lch(25% 1.125 355);
+        --fg: lch(80% 2 25);
+        --fg-muted: lch(60% 2 25);
+        --bg: lch(18% 2 355);
+        --bg-base: lch(10% 1 355);
+        --blue: lch(50% 50 265);
+        --teal: lch(50% 50 205);
+        --red: lch(50% 50 25);
+        --heavy-vishraam: lch(60% 44 55);
+        --medium-vishraam: lch(60% 44 145);
+        --light-vishraam: lch(60% 44 295);
+      }
+
+      ::selection {
+        background: lch(66% 70 80 / 60%);
+      }
+
+      a {
+        color: lch(60% 40 265);
+      }
+
+      a:hover {
+        color: lch(80% 40 265);
+      }
+    }
   }
 }
 
