--- a/src/components/on-this-page/on-this-page.css
+++ b/src/components/on-this-page/on-this-page.css
@@ -1,35 +1,17 @@
 .on-this-page {
-  border-radius: 1em;
   margin: 24px 0;
-  padding: 0 12px;
   font-size: 0.9em;
-}
-
-.on-this-page h6 {
-  margin: 10px 0;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.on-this-page ul {
-  margin: 0;
-  padding: 0 0 20px 0;
-  list-style: none;
+  line-height: 2.2;
 }
 
 .on-this-page a {
-  position: relative;
   display: block;
-  border: 0 solid var(--shader);
-  border-left-width: 2px;
-  padding: 4px 2px 4px 8px;
-  text-decoration: none;
 }
 
 .on-this-page a.indent {
-  padding-left: 30px;
+  padding-left: 1.6em;
 }
 
-.on-this-page a:hover {
-  border-color: var(--theme-accent);
+.on-this-page a + h6 {
+  margin-top: 1.5em;
 }
