--- a/src/components/on-this-page/on-this-page.css
+++ b/src/components/on-this-page/on-this-page.css
@@ -1,6 +1,6 @@
 .on-this-page {
-  font-size: 0.9em;
-  line-height: 2.2;
+  font-size: 0.875em;
+  line-height: calc(1.5 / 0.875);
 }
 
 .on-this-page a {
@@ -8,9 +8,13 @@
 }
 
 .on-this-page a.indent {
-  padding-left: 1.6em;
+  padding-left: 0.8em;
 }
 
 .on-this-page a + h6 {
-  margin-top: 1.5em;
+  margin-top: calc(1.5em / 0.875);
+}
+
+.on-this-page * + a {
+  margin-top: calc(1.5em / 0.875 / 2);
 }
