--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -5,13 +5,14 @@
 .modal-bg {
   opacity: 0;
   transition: opacity var(--animation-duration) ease;
+  z-index: 1;
 }
 
 .modal-bg.open {
   width: 100vw;
   height: 100vh;
-  background-color: var(--fg);
-  opacity: var(--alpha);
+  background-color: var(--bg);
+  opacity: var(--alpha-80);
   position: fixed;
   max-width: none;
 }
