--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Sant Lipi';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: auto;
+  src: url('/fonts/SantLipi-VF.woff2') format('woff2-variations'),
+    url('/fonts/SantLipi-VF.woff2') format('woff2');
+  unicode-range: U+0A00-0A76; /* gurmukhi */
+}
+
 :root {
   --black-rgb: 0% 0% 0%;
   --dark-gray-rgb: 14.77% 14.77% 14.77%;
@@ -125,9 +135,9 @@
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Sant Lipi', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
   font-size: clamp(12px, 1rem, 24px);
   line-height: 1.5;
   margin: 0;
@@ -224,8 +234,8 @@ pre {
 }
 
 code {
-  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
-    Liberation Mono, monospace;
+  font-family: 'Sant Lipi', ui-monospace, SFMono-Regular, SF Mono, Menlo,
+    Consolas, Liberation Mono, monospace;
   font-size: 0.9em;
   background-color: var(--shader);
   padding: 0.2em 0.4em;
