--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -1,3 +1,26 @@
+.notes-pane {
+  position: fixed;
+  height: 5.5em;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  resize: none;
+  border: 0;
+  border-radius: 0.5em 0.5em 0 0;
+  padding: 1em;
+  box-sizing: border-box;
+  background-color: var(--bg-base);
+  color: var(--fg);
+  font-family: 'Sant Lipi', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: 500;
+}
+
+.notes-pane::-webkit-scrollbar {
+  display: none;
+}
+
 .classic > .line + .line {
   margin-top: 1.5em;
 }
