--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -89,10 +89,10 @@ header .lotus {
   }
   header > div {
     width: calc(env(titlebar-area-width, 100%));
+    height: env(titlebar-area-height, 38px);
   }
   header a,
   header input {
-    min-height: env(titlebar-area-height, 38px);
     -webkit-app-region: no-drag;
     app-region: no-drag;
   }
